@@ -1,3 +1,9 @@
+2009-09-25  Raphael 'kena' Poss  <r.c.poss@uva.nl>
+
+	Extend the `mandel' demo with use of the SEP protocol.
+	
+	* demo/mandel.c: Update to use place management.
+
 2009-09-21  Raphael 'kena' Poss  <r.c.poss@uva.nl>
 
 	Add some demos with graphics.
